fix: navbar collapse responsiveness in client

--- a/src/styles/client.css
+++ b/src/styles/client.css
@@ -49,6 +49,9 @@ body {
     padding-inline: .7rem;
     align-self: flex-start;
 }
+.navbar ul:first-of-type {
+    padding-right: 2rem;
+}
 
 .navbar ul:last-of-type .nav-item{
     margin-right: 1.5rem;
@@ -58,6 +61,11 @@ body {
     display: flex;
     align-items: center;
     color: white;
+
+}
+
+.navbar ul:last-of-type .nav-item .nav-link {
+    text-wrap: nowrap;
 }
 
 .navbar .nav-item .fa-globe {
@@ -86,7 +94,9 @@ body {
 .navbar-toggler .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23ffffff' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba(252,128,2,255)' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
-  
+
+
+
 
 /* HOME */
 #home {
@@ -100,7 +110,7 @@ body {
 
 .home-container {
     padding-top: 15%;
-    padding-left: 10%;
+    padding-inline: 10%;
     color: white;
 }
 
